--- a/src/App.scss
+++ b/src/App.scss
@@ -1,17 +1,3 @@
-// @import '~bulma/sass/utilities/initial-variables';
-// @import '~bulma/sass/utilities/functions';
-// @import '~bulma/sass/utilities/derived-variables';
-
-// @import '~bulma/sass/utilities/animations';
-// @import '~bulma/sass/utilities/mixins';
-// @import '~bulma/sass/utilities/controls';
-
-// @import '~bulma/sass/base/_all';
-// @import '~bulma/sass/elements/_all';
-// @import '~bulma/sass/components/_all';
-// @import '~bulma/sass/grid/_all';
-// @import '~bulma/sass/layout/_all';
-
 @import '~bulma/sass/utilities/_all';
 @import '~bulma/sass/base/_all';
 @import '~bulma/sass/elements/_all';
@@ -104,7 +90,10 @@ h1.title {
 .DiscoveryPanel {
   padding-right: $unit * 4;
   border-right: solid 1px #ddd;
-  min-height: 100%;
+  min-height: 80vh;
+
+  position: sticky;
+  top: 16px;
 }
 
 .Field {
@@ -119,7 +108,8 @@ h1.title {
 }
 
 .ReleasedBetween,
-.RatingBetween {
+.RatingBetween,
+.VoteCountBetween {
   display: flex;
 
   .select:first-child select {
@@ -132,4 +122,16 @@ h1.title {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
   }
+}
+
+.BigMessage {
+  width: 100%;
+  min-height: 70vh;
+
+  align-items: center;
+  place-content: center;
+  display: flex;
+
+  font-weight: 200;
+  font-size: 2rem;
 }
